Add basic content to index file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
+  <img src="images/logo.svg" alt="">
   <meta charset="utf-8">
-  <title></title>
+  <title>The Solar System</title>
 </head>
 <body>
 
