--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <img src="images/logo.svg" alt="">
   <meta charset="utf-8">
   <title>The Solar System</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
+  <header>
+    <h1>The Solar System</h1>
+  </header>
 
 </body>
 </html>
