--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
     </nav>
   </header>
 
+  <main>
+    <figure>
+      <img src="images/banner.svg" alt="">
+      <figcaption>The Solar System-our home in the stars</figcaption>
+    </figure>
+  </main>
+
 </body>
 </html>
