--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
   <main>
     <figure>
       <img src="images/banner.svg" alt="">
-      <figcaption>The Solar System-our home in the stars</figcaption>
+      <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
   </main>
+
+  <footer>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </footer>
 
 </body>
 </html>
